--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "batchnorm.h": "c",
         "array": "c",
         "string": "c",
-        "string_view": "c"
-    }
+        "string_view": "c",
+        "tensor.h": "c",
+        "stdio.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
